fix: 중계 api 진행 중 이슈

--- a/ballrae_backend/pli_api/pli_demo.ipynb
+++ b/ballrae_backend/pli_api/pli_demo.ipynb
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "id": "1d53d2cb",
    "metadata": {},
    "outputs": [],
@@ -832,17 +832,10 @@
     "    years_pro: Optional[int] = None,\n",
     "    score_format: str = \"home:away\",\n",
     ") -> Dict[str, Any]:\n",
-    "    \"\"\"\n",
-    "    한 타석 atbat → PLI 엔진 요청 바디로 변환\n",
-    "    context 예:\n",
-    "    {\n",
-    "      \"home_team\": \"NC\",\n",
-    "      \"away_team\": \"HH\"\n",
-    "    }\n",
-    "    \"\"\"\n",
     "    inning = int(atbat[\"inning\"])\n",
     "    outs = int(atbat[\"out\"])\n",
     "    half = atbat.get(\"half\", \"top\")\n",
+    "    bat_order = atbat.get(\"bat_order\")\n",
     "    runners_code = runners_code_from_onbase(atbat.get(\"on_base\", {}))\n",
     "    score_str = atbat.get(\"score\", \"0:0\")\n",
     "\n",
@@ -851,35 +844,36 @@
     "    )\n",
     "\n",
     "    triggers = detect_triggers(atbat)\n",
-    "    # NOTE: base_wpa가 없으면 임시 디폴트 (원하면 0.1~0.2 사이 전략적으로)\n",
     "    bwpa = float(base_wpa if base_wpa is not None else 0.12)\n",
     "\n",
     "    payload = {\n",
-    "        \"base_wpa\": bwpa,\n",
+    "        # --- 식별자 ---\n",
     "        \"inning\": inning,\n",
+    "        \"half\": half,\n",
+    "        \"bat_order\": bat_order,\n",
+    "\n",
+    "        # --- 상황값 ---\n",
+    "        \"base_wpa\": bwpa,\n",
     "        \"outs\": outs,\n",
     "        \"runners_code\": runners_code,\n",
     "        \"score_diff\": score_diff,\n",
     "        \"temp_c\": temp_c,\n",
-    "        # 팀/선수 요인은 optional — 값 없으면 가중치 1.0 처리\n",
+    "\n",
+    "        # --- 팀/선수 요인 ---\n",
     "        \"loss_streak\": loss_streak,\n",
     "        \"recent_ba\": recent_ba,\n",
     "        \"season_ba\": season_ba,\n",
     "        \"years_pro\": years_pro,\n",
-    "        # 트리거\n",
+    "\n",
+    "        # --- 트리거 ---\n",
     "        \"pinch_event\": triggers[\"pinch_event\"],\n",
     "        \"intentional_walk\": triggers[\"intentional_walk\"],\n",
     "        \"error_happened\": triggers[\"error_happened\"],\n",
-    "        # 실책 다음 타자 보정은 상위에서 컨텍스트로 판단하여 True/False 넘겨도 됨\n",
     "        \"next_batter_after_error\": False,\n",
     "    }\n",
     "    return payload\n",
     "\n",
     "def inning_pack_to_pli_requests(feed: Dict[str, Any], *, temp_c: Optional[float] = None, score_format: str = \"home:away\") -> List[Dict[str, Any]]:\n",
-    "    \"\"\"\n",
-    "    질문에 준 JSON(한 이닝의 top/bot 묶음)을 받아,\n",
-    "    각 at-bat을 PLI 요청 리스트로 변환\n",
-    "    \"\"\"\n",
     "    data = feed[\"data\"]\n",
     "    ctx = {\n",
     "        \"home_team\": data[\"defense_positions\"][\"home_team\"],\n",
@@ -891,7 +885,28 @@
     "        side_block = data.get(side)\n",
     "        if not side_block:\n",
     "            return\n",
-    "        for ab in side_block.get(\"atbats\", []):\n",
+    "        inning_default = side_block.get(\"inning_number\")\n",
+    "        atbats = side_block.get(\"atbats\", [])\n",
+    "\n",
+    "        for idx, ab in enumerate(atbats, start=1):\n",
+    "            # half 기본값: side(top/bot)\n",
+    "            ab_half = ab.get(\"half\") or side\n",
+    "            # bat_order 기본값: 원본 bat_order → 없으면 appearance_number → 없으면 enumerate 인덱스\n",
+    "            ab_bat_order = ab.get(\"bat_order\")\n",
+    "            if ab_bat_order in (None, \"\"):\n",
+    "                ab_bat_order = ab.get(\"appearance_number\") or idx\n",
+    "\n",
+    "            # inning 기본값: 각 atbat의 inning → 없으면 side_block의 inning_number\n",
+    "            ab_inning = ab.get(\"inning\") or inning_default\n",
+    "\n",
+    "            # 식별자 주입\n",
+    "            ab = {\n",
+    "                **ab,\n",
+    "                \"half\": ab_half,\n",
+    "                \"bat_order\": ab_bat_order,\n",
+    "                \"inning\": ab_inning,\n",
+    "            }\n",
+    "\n",
     "            req = atbat_to_pli_payload(\n",
     "                ab, ctx, temp_c=temp_c, score_format=score_format\n",
     "            )\n",
@@ -902,11 +917,18 @@
     "    return requests\n",
     "\n",
     "def inning_pack_to_pli_scores(\n",
-    "    feed: dict, *, temp_c: float | None = None, score_format: str = \"home:away\",\n",
-    "    return_detail: bool = False,\n",
+    "    feed: dict,\n",
+    "    *,\n",
+    "    temp_c: float | None = None,\n",
+    "    loss_streak: int | None = None,\n",
+    "    recent_ba: float | None = None,\n",
+    "    season_ba: float | None = None,\n",
+    "    years_pro: int | None = None,\n",
+    "    score_format: str = \"home:away\",\n",
+    "    return_detail: bool = False,   # ✅ 이렇게\n",
     "):\n",
     "    \"\"\"\n",
-    "    return_detail=False: [0.1372, 0.0921, ...]  # 타석 순서대로 PLI 숫자만\n",
+    "    return_detail=False: [{\"inning\":3,\"half\":\"top\",\"bat_order\":2,\"pli\":0.1372}, ...]\n",
     "    return_detail=True : [{\"pli\":..., \"weights\":..., \"situation\":..., \"input\":...}, ...]\n",
     "    \"\"\"\n",
     "    reqs = inning_pack_to_pli_requests(feed, temp_c=temp_c, score_format=score_format)\n",
@@ -927,8 +949,7 @@
     "            error_momentum_weight(bool(r.get(\"error_happened\")), bool(r.get(\"next_batter_after_error\")))\n",
     "        )\n",
     "        w_total = combine_weights(w_env, w_personal, w_situ)\n",
-    "        pli = float(r[\"base_wpa\"]) * w_total\n",
-    "        pli_val = round(pli, 4)\n",
+    "        pli_val = round(float(r[\"base_wpa\"]) * w_total, 4)\n",
     "\n",
     "        if return_detail:\n",
     "            results.append({\n",
@@ -943,7 +964,12 @@
     "                \"situation\": {\"level\": level, \"description\": desc, \"score\": total_score},\n",
     "            })\n",
     "        else:\n",
-    "            results.append(pli_val)\n",
+    "            results.append({\n",
+    "                \"inning\": r[\"inning\"],\n",
+    "                \"half\": r.get(\"half\"),\n",
+    "                \"bat_order\": r.get(\"bat_order\"),\n",
+    "                \"pli\": pli_val,\n",
+    "            })\n",
     "    return results"
    ]
   },
@@ -2096,37 +2122,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "id": "8aea08c1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0.12,\n",
-       " 0.216,\n",
-       " 0.216,\n",
-       " 0.216,\n",
-       " 0.12,\n",
-       " 0.12,\n",
-       " 0.12,\n",
-       " 0.12,\n",
-       " 0.12,\n",
-       " 0.216,\n",
-       " 0.216,\n",
-       " 0.216,\n",
-       " 0.216,\n",
-       " 0.12,\n",
-       " 0.12]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'inning': 9, 'half': 'top', 'bat_order': 8, 'pli': 0.144}\n",
+      "{'inning': 9, 'half': 'top', 'bat_order': 9, 'pli': 0.2592}\n",
+      "{'inning': 9, 'half': 'top', 'bat_order': 1, 'pli': 0.2592}\n",
+      "{'inning': 9, 'half': 'top', 'bat_order': 1, 'pli': 0.2592}\n",
+      "{'inning': 9, 'half': 'top', 'bat_order': 2, 'pli': 0.144}\n",
+      "{'inning': 9, 'half': 'top', 'bat_order': 3, 'pli': 0.144}\n",
+      "{'inning': 9, 'half': 'top', 'bat_order': 4, 'pli': 0.144}\n",
+      "{'inning': 9, 'half': 'top', 'bat_order': 5, 'pli': 0.144}\n",
+      "{'inning': 9, 'half': 'top', 'bat_order': 6, 'pli': 0.144}\n",
+      "{'inning': 9, 'half': 'bot', 'bat_order': 6, 'pli': 0.2592}\n",
+      "{'inning': 9, 'half': 'bot', 'bat_order': 6, 'pli': 0.2592}\n",
+      "{'inning': 9, 'half': 'bot', 'bat_order': 7, 'pli': 0.2592}\n",
+      "{'inning': 9, 'half': 'bot', 'bat_order': 7, 'pli': 0.2592}\n",
+      "{'inning': 9, 'half': 'bot', 'bat_order': 8, 'pli': 0.144}\n",
+      "{'inning': 9, 'half': 'bot', 'bat_order': 9, 'pli': 0.144}\n"
+     ]
     }
    ],
    "source": [
-    "inning_pack_to_pli_scores(raw_data)"
+    "# 1) 날씨, 선수 스탯 같은 컨텍스트 준비\n",
+    "extra_context = {\n",
+    "    \"temp_c\": 32,\n",
+    "    \"loss_streak\": 2,\n",
+    "    \"recent_ba\": 0.280,\n",
+    "    \"season_ba\": 0.265,\n",
+    "    \"years_pro\": 5,\n",
+    "}\n",
+    "\n",
+    "# 2) PLI 계산 호출\n",
+    "results = inning_pack_to_pli_scores(raw_data, **extra_context)\n",
+    "\n",
+    "for r in results:\n",
+    "    print(r)"
    ]
   },
   {
