feat: PLI지수 docker 추가

--- a/pli-api/pli_demo.ipynb
+++ b/pli-api/pli_demo.ipynb
@@ -19,7 +19,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "id": "6654d471",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dockerfile       \u001b[34mapp\u001b[m\u001b[m              pli_demo.ipynb   requirements.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cd ..\n",
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "99bb8a95",
    "metadata": {},
    "outputs": [
@@ -117,7 +136,7 @@
        "4      고척스카이돔       NaN  NaN   서울        0.82                  NaN    GC"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,8 +153,8 @@
     "\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "pd.set_option(\"display.width\", 120)\n",
-    "wpa = pd.read_csv('../../data/kbo_we_matrix_filtered.csv')\n",
-    "stadium = pd.read_csv('../../data/stadium.csv')\n",
+    "wpa = pd.read_csv('../data/kbo_we_matrix_filtered.csv')\n",
+    "stadium = pd.read_csv('../data/stadium.csv')\n",
     "stadium.head()"
    ]
   },
